Fixed tab separators on Firefox 51.

--- a/FirefoxEdgeDark.css
+++ b/FirefoxEdgeDark.css
@@ -203,6 +203,7 @@
       var(--tab-separator-color) 6px,
       var(--tab-separator-color) calc(100% - 6px),
       transparent calc(100% - 6px));
+    border: none !important;
     opacity: 1.0;
   }
 
@@ -213,6 +214,7 @@
       var(--tab-separator-color) 0px,
       var(--tab-separator-color) 100%,
       transparent 100%);
+    border: none !important;
   }
 
   .tabbrowser-tab .close-icon {
